fixed spacing and comments

--- a/app/assets/stylesheets/components/_discussion-item.scss
+++ b/app/assets/stylesheets/components/_discussion-item.scss
@@ -17,10 +17,7 @@
     border: 2px solid $blue-light;
     outline: none;
   }
-    .discussion-item-title {
-        overflow: hidden;
 
-    }
   .discussion-item-description {
     overflow: hidden;
     display: -webkit-box;
